--- a/src/paragon-framework/base/colors/_given-colors.scss
+++ b/src/paragon-framework/base/colors/_given-colors.scss
@@ -24,6 +24,15 @@
 
 	//need to adjust token color
 	--color-dark-gray-7: #2e2d38;
+	// --color-card-info-bg: ;
+	--color-dark-card-info-bg: #384357;
+	--color-card-info-bg: #e3f4fe;
+	--color-dark-card-success-bg: #384249;
+	--color-card-success-bg: #e3f4fe;
+	--color-dark-card-warning-bg: #4a3d41;
+	--color-card-warning-bg: #e3f4fe;
+	--color-dark-card-error-bg: #493642;
+	--color-card-error-bg: #e3f4fe;
 
 	//added gray-8 for 50% of gray-7 (for disabled inputs)
 	--color-dark-gray-8: #25232b;
