Add styles for buttons back

--- a/src/paragon-framework/base/colors/_theme-switcher.scss
+++ b/src/paragon-framework/base/colors/_theme-switcher.scss
@@ -65,7 +65,7 @@
 	/* Buttons */
 	--button-primary-bg: var(--color-primary);
 	--button-primary-hover: var(--color-primary-dark);
-	--button-primary-text: var(--color-white);
+	--button-primary-text: var(--color-text);
 
 	--button-gray-bg: var(--color-gray-3);
 	--button-gray-hover: var(--color-gray-3-dark);
