--- a/src/paragon-framework/modules/_modules.scss
+++ b/src/paragon-framework/modules/_modules.scss
@@ -3,8 +3,8 @@
 @import 'forms/forms';
 @import 'forms/themed-elements';
 @import 'forms/card-controls';
-// @import 'actions/actions';
-// @import 'actions/button-group';
+@import 'actions/actions';
+@import 'actions/button-group';
 @import 'avatar/avatar';
 @import 'pagination/pagination';
 @import 'tooltip/tooltip';
