--- a/src/paragon-styleguide/example-page.scss
+++ b/src/paragon-styleguide/example-page.scss
@@ -9,11 +9,19 @@ $sidebar-width: 13rem;
 	margin-top: $space-m !important;
 }
 
+.theme-switcher {
+	position: fixed;
+	right: 1rem;
+	top: 2rem;
+	z-index: 9999;
+}
+
 .logo-container {
 	align-items: center;
 	display: flex;
 	justify-content: center;
 	padding: 1rem;
+	// background-color: var(--color-example-sidebar-background);
 
 	img {
 		width: 100%;
@@ -56,7 +64,7 @@ $sidebar-width: 13rem;
 	}
 
 	a {
-		color: var(--color-accent-light);
+		color: var(--color-text);
 		// color: lighten($color-text, 20%) !important;
 		display: block;
 		padding-left: 0.5rem;
@@ -103,7 +111,7 @@ $sidebar-width: 13rem;
 	}
 
 	.menu-group {
-		background-color: var(--color-container-background);
+		background-color: var(--color-example-sidebar-background);
 		border-top: 2px solid var(--color-border);
 		display: none;
 		font-size: 0.9rem;
