--- a/src/paragon-framework/modules/tooltip/_tooltip.scss
+++ b/src/paragon-framework/modules/tooltip/_tooltip.scss
@@ -1,4 +1,4 @@
-$tooltip-color: var(--color-border);
+$tooltip-color: var(--color-dark-gray-6);
 $clippy-color: var(--color-container-background);
 
 //STATE
